[project]
name = "mixture-of-diffusers-sdxl-tiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate",
    "diffusers",
    "fastapi>=0.115.2",
    "gradio==5.15.0",
    "ligo-segments",
    "numpy==1.26.4",
    "opencv-python",
    "peft",
    "scipy",
    "torch",
    "transformers",
]
